--- a/Cats_and_dogs.ipynb
+++ b/Cats_and_dogs.ipynb
@@ -38,7 +38,7 @@
       "source": [
         "# generators -create batches\n",
         "train_ds = keras.utils.image_dataset_from_directory(\n",
-        "    directory = 'C:\\\\Users\\\\aadit\\\\Downloads\\\\cont\\\\dogs_vs_cats\\\\train',\n",
+        "    directory = 'C:\\\\Users\\\\aadee\\\\Downloads\\\\cont\\\\dogs_vs_cats\\\\train',\n",
         "    labels = 'inferred',\n",
         "    label_mode = 'int',\n",
         "    batch_size = 32,\n",
@@ -46,14 +46,14 @@
         ")\n",
         "\n",
         "validation_ds= keras.utils.image_dataset_from_directory(\n",
-        "    directory='C:\\\\Users\\\\aadit\\\\Downloads\\\\cont\\\\dogs_vs_cats\\\\train',\n",
+        "    directory='C:\\\\Users\\\\aadee\\\\Downloads\\\\cont\\\\dogs_vs_cats\\\\train',\n",
         "    labels= 'inferred',\n",
         "    label_mode='int',\n",
         "    batch_size=32,\n",
         "    image_size=(256,256)\n",
         ")\n",
         "test_ds= keras.utils.image_dataset_from_directory(\n",
-        "    directory='C:\\\\Users\\\\aadit\\\\Downloads\\\\cont\\\\dogs_vs_cats\\\\test',\n",
+        "    directory='C:\\\\Users\\\\aadee\\\\Downloads\\\\cont\\\\dogs_vs_cats\\\\test',\n",
         "    labels= 'inferred',\n",
         "    label_mode='int',\n",
         "    batch_size=32,\n",
